# Preferences

./: .claudeignore  .gitignore  CLAUDE.md  FOCUS.md  HOO_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  OPEN_ENDED_README.md  PROBE_EVALUATION.md  QUICK_REFERENCE.md  README.md  TODO.md  binary_test_v1.yaml  pod_setup.sh  pod_setup.sh.old  pyproject.toml  research_log.md  revealed_test_v1.yaml  script.py  setup.txt  test_v1.yaml
.claude/: ralph-loop.local.md  settings.json  settings.local.json
activations/: gemma_3_27b  gemma_3_27b_aesthete  gemma_3_27b_midwest  gemma_3_27b_villain
configs/: completion_generation.yaml  multi_model_active_learning.yaml  multi_model_stated.yaml  open_ended_in_distribution.yaml  open_ended_mixed_distribution.yaml  post_task_active_learning.yaml  post_task_qualitative.yaml  post_task_ranking.yaml  post_task_ranking_test.yaml  post_task_revealed.yaml  post_task_stated.yaml  pre_task_active_learning.yaml  pre_task_qualitative.yaml  pre_task_ranking.yaml  pre_task_revealed.yaml  pre_task_stated.yaml  probe_experiment.yaml  stated.yaml  test_post_task_active_learning.yaml
data_analysis/: __init__.py  al_comparison.py  bounds_sensitivity.py  regularization_analysis.py  run_al_analysis.py  thurstonian_analysis.py  tolerance_scaling.py  tuning.md
docs/: Experiment_details.md  FOCUS.md  Project spec.md  competing_preferences_direction.md  lw_post_draft.md  ood_generalization_design.md  research_log.md  research_loop_refactor.md  steering_direction.md
experiments/: BACKLOG.md  pod_smoke_test.md
model_tests/: README.md  test_response_formats.py  test_tokenizer_comparison.py
notebooks/: explore_results.ipynb
reflections/: TEMPLATE.md
results/: baseline_utility_correlation_summary.txt  sysprompt_effects_gemma_2_27b_20260202_161517.json  sysprompt_effects_gemma_2_27b_20260202_161934.json
scripts/: audit_topic_categories.py  baseline_canonical.py  benchmark_hf_model.py  binary_multimodel_experiment.py  check_stated_data.py  correlation_heatmap.py  extract_thurstonian_fits.py  filter_creak.py  icl_vs_sysprompt.py  icl_vs_sysprompt_stimuli.json  inspect_pairwise.py  inspect_records.py  migrate_to_unified_cache.py  normalize_existing_vectors.py  parse_rate_analysis.py  pilot_base_model.py  plot_3k_vs_10k_comparison.py  plot_classification_confusion.py  plot_competing_revised.py  plot_cross_topic_lw.py  plot_gemma3_10k_probes.py  plot_hoo_cross_model.py  plot_overview_v4.py  plot_per_topic_hoo_with_qwen.py  plot_per_topic_lw.py  plot_phrasing_sensitivity.py  plot_topic_utilities_lw.py  (+12 more)
(+4622 files in other folders)
