[project]
name = "preferences"
version = "0.1.0"
description = "A library for measuring AI model preferences"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.0.0",
    "autograd>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
viz = [
    "ipywidgets>=8.0.0",
    "matplotlib>=3.5.0",
    "mplcursors>=0.5.0",
    "notebook>=7.0.0",
    "scipy>=1.10.0",
]
probe = [
    "transformer-lens>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "api: tests that make real API calls (requires API key)",
    "gpu: tests that require a GPU or heavy model loading",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["FA"]  # flake8-future-annotations
